	error: "Never use <bits/ipctypes.h> directly; include <sys/ipc.h> instead."
	by including <sys/ipc.h> instead of <bits/ipctypes.h>

2016-05-01  Daniel Jour  <daniel.oertwig@gmail.com>

	* lispbibl.d (VALUE1_EXTRA) [!value1_register]: do not define
	This fixes patch#93dee6a014b2 (2008-01-13) as discussed in
	https://sourceforge.net/p/clisp/mailman/message/35061096/

2016-05-16  Daniel Jour  <daniel.oertwig@gmail.com>

	Update asdf to version 3.1.7
	* modules/asdf/asdf.lisp: Update to asdf 3.1.7
	* modules/asdf/asdf.xml: Update asdf module description

2014-10-22  Sam Steingold  <sds@gnu.org>

	Fix bug#668 posix:file-state always return NIL for :rdev
	* modules/syscalls/configure.in: check for struct stat members

2014-05-11  Sam Steingold  <sds@gnu.org>

	* m4/termcap.m4 (CL_TERMCAP): also look for tgetent in tinfo;
	fixes bug#665 as suggested by Jason Miller <jasontkd@users.sf.net>

2013-04-14  Sam Steingold  <sds@gnu.org>

	* modules/asdf/asdf.lisp: upgrade to 2.33

2013-01-06  Sam Steingold  <sds@gnu.org>

	Avoid startup errors when the user has weird ~/.clisp
	* pathname.d, subr.d (PROBE-PATHNAME): accept &key (:error t)
	* spvw.d (main_actions): pass :ERROR NIL to PROBE-PATHNAME

2013-02-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/demos/clx-demos.lisp: require CLX

2013-02-05  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (__swblk_t): remove the unused
	`def-c-type' (removed from glibc too); fixes bug#656;
	see also http://article.gmane.org/gmane.comp.lib.glibc.alpha/25618

2013-01-06  Bruno Haible  <bruno@clisp.org>

	* pathname.d (unix_user_pwd): Don't use getlogin().
	Reported by Alberto Riva <alb@chip.org> in
	<http://article.gmane.org/gmane.lisp.clisp.general:13995>

2012-11-23  Sam Steingold  <sds@gnu.org>

	* modules/oracle/Makefile.in (ALL_CFLAGS): new variable,
	accumulate all C flags here, move -I$(srcdir) here from CPPFLAGS
	which is overridden by clisp-link invocation from Makefile
